# CSRNGs

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: belt-hmac-rng.yml  workspace.yml
aes-rng/: Cargo.toml
aes-rng/benches/: rngs.rs
aes-rng/src/: byte_slice.rs  lib.rs  simd.rs
belt-hmac-rng/: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
belt-hmac-rng/benches/: gen.rs
belt-hmac-rng/src/: lib.rs
belt-hmac-rng/tests/: mod.rs
